--- a/SudoukuSolver.Tests/SudoukuSolver.Tests.csproj
+++ b/SudoukuSolver.Tests/SudoukuSolver.Tests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SudokuSolver\SudokuSolver.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
