--- a/sudoku-ui/package.json
+++ b/sudoku-ui/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "sudoku-ui",
-  "version": "0.0.0",
+  "name": "sudoku-solver-ui",
+  "version": "1.0.0",
+  "description": "Real-time Sudoku algorithm visualization with multiple solving strategies",
+  "keywords": ["sudoku", "algorithm", "visualization", "angular", "typescript"],
+  "author": "Sudoku Solver Team",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
