--- a/.github/workflows/main_sudoku-solver-ui.yml
+++ b/.github/workflows/main_sudoku-solver-ui.yml
@@ -21,19 +21,22 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
+          node-version: '18.x'
+          cache: 'npm'
+          cache-dependency-path: sudoku-ui/package-lock.json
 
       - name: npm install, build, and test
         run: |
+          cd sudoku-ui
           npm install
-          npm run build --if-present
+          npm run build
           npm run test --if-present
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: sudoku-ui/dist
 
   deploy:
     runs-on: ubuntu-latest
