--- a/.github/workflows/main_sudoku-solver-ui.yml
+++ b/.github/workflows/main_sudoku-solver-ui.yml
@@ -25,12 +25,11 @@ jobs:
           cache: 'npm'
           cache-dependency-path: sudoku-ui/package-lock.json
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
           cd sudoku-ui
           npm install
           npm run build
-          npm run test --if-present
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
