--- a/.github/workflows/main_sudoku-solver-ui.yml
+++ b/.github/workflows/main_sudoku-solver-ui.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: sudoku-ui/dist
+          path: sudoku-ui/dist/sudoku-ui
 
   deploy:
     runs-on: ubuntu-latest
