--- a/sudoku-ui/angular.json
+++ b/sudoku-ui/angular.json
@@ -27,7 +27,8 @@
             "inlineStyleLanguage": "css",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/web.config"
             ],
             "styles": [
               "src/styles.css"
